<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">掌尚软院</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="about_title1">1.掌尚软院是什么？</string>
    <string name="about_title2">2.掌尚软院目前主要实现了什么？</string>
    <string name="about_title3">3.掌尚软院的产品定位、未来规划？</string>
    <string name="about_title4">4.我对掌尚软院目前版本的评价？</string>
    <string name="about_body1">  掌尚软院是一款专门为软院学子精心打造的校园应用；一款想要在手机上实现目前PC端所有功能的应用；致力于推动软院移动化；一切为了软院学子，为了一切软院学子，为了软院学子一切！！</string>
    <string name="about_body2">关心学校大事还要登陆PC？——No，移动互联时代，交大人岂能Out！掌尚软院帮你快速获取校园新闻、公告、招聘等信息；校内资讯达人舍你其谁？ 我天资异禀，可就是找不到回宿舍的路，你咬我？——没问题，掌尚软院帮你进行路线规划，实时定位，妈妈再也不用担心我的路痴了！！ 校内机构繁多，找不到人，解决不了问题，好怕怕！——甭担心，掌尚软院对学校所有部门均支持一键拨号，一个不开心你就呼叫投诉，我看谁还敢惹你！！ 交大风景美如画，没有照片墙？还行不行？——这个问题，不能忍！！到掌尚软院看我大城建美景，赛北国风光，胜南国山水；照片墙让你对交大的热爱彻底爆棚！！ 我是“毕加索”一族，学校大事竟然没人通知我？还没有爱？——有，绝对有，必须有！使用掌尚软院，校内重大事件精准推送，生活中再也没有错过！掌尚软院——给你满满的爱！！ 我是贴吧红人，度娘的好孩纸，誓与贴吧不分离！——掌声软院嵌入百度贴吧，从此贴吧一键直达，再也没有分离！你，只用专心做达人！！</string>
    <string name="about_body3">产品定位：做软院人的好助手，专注、专业、专一服务于软院学子！未来规划：掌尚软院会在随后的版本中(后台服务端搭建开发完毕后)逐步增加课程表查询、图书馆借还查询、选课、查课表、评教、查询成绩等直击用户痛点的功能。想想还有点小鸡冻呢！！</string>
    <string name="about_body4">从我的个人角度：70分！掌尚软院是我完全、独立开发的一个应用，倾注了大量的心血，这个过程展现的不仅仅是最终的这个应用，更印证着前期的汗水；而且这个版本的效果确实是超出了我之前的期望！它就是我创造的孩纸，我用心地去雕琢它、呵护它。我，爱我的努力，爱我的作品！当然，我也知道，从用户的角度看，目前版本还存在功能相对单一，软院学子痛点未被击破等不足；前路漫漫，我会继续努力，掌尚城建会变得越来越好！</string>
    <string name="serverurl">http://172.29.70.144:8080/zsry.xml</string>

</resources>